<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.ContactActivity">

    <include
        android:id="@+id/myActionBar"
        layout="@layout/actionbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilNombre"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myActionBar">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contacto_nombre" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilCorreo"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilNombre">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contacto_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilMensaje"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilCorreo">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tietMensaje"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/contacto_mensaje"
            android:inputType="textMultiLine"
            android:lines="15"
            android:maxLines="15"
            android:minLines="10"
            android:scrollbars="vertical"
            android:singleLine="false"
            android:gravity="top"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <Button
        android:id="@+id/btnEnviarComentario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contacto_enviar_comentario"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tilMensaje"
        android:theme="@style/MiBotonRaised"
        />
</androidx.constraintlayout.widget.ConstraintLayout>